--- a/public/index.html
+++ b/public/index.html
@@ -56,9 +56,8 @@
                     <img src="images/speaker-1.jpeg" class="img-resposnive img-fluid">
 
                 </div>
-                <h5>Arithra Ghosh</h5>
-                <p style="padding:2%">Founder of Resume Help and Resume Writer and Book Coach <br> 
-                    Company Name : Resume Help rofessional resume services</p>
+                <h5>Aritra Ghosh</h5>
+                <p>Resume Making</p>
                 <p class="item social" style="margin: 5%;">
                     Have a look at <br><a style="text-decoration: none;color: plum;"
                     href="www.resumehelp.co.in"><i class="fa fa-globe"></i></a>&nbsp;&nbsp;<a style="text-decoration: none;color: plum;" href=" https://www.linkedin.com/in/oritro"><i class="fa fa-linkedin"></i></a>
@@ -75,7 +74,7 @@
                     <img src="images/speaker-2.jpeg" class="img-resposnive img-fluid">
                 </div>
                 <h5>Kanishk Rao</h5>
-                <p>Strategy and Analytics | Public Speaking | Deloitte US</p>
+                <p>Time management | Public Speaking </p>
                 <p class="item social" style="margin: 5%;">
                     Have a look at <br>
                     <a style="text-decoration: none;color: plum;"
@@ -91,7 +90,7 @@
                         class="img-resposnive img-fluid">
                 </div>
                 <h5>Technical Navigator</h5>
-                <p>Ethical Hacker</p>
+                <p>Ethical Hacking</p>
                 <p class="item social" style="margin: 5%;">
                     Have a look at <br>
                     <a style="text-decoration: none;color: plum;"
