--- a/public/message.html
+++ b/public/message.html
@@ -29,7 +29,7 @@
         </div>
         <h5 style="color: white;">Thank you for your response, Your Data Has Been Saved !</h5>
 
-        <a type="button" class="btn btn-secondary">Go Back</a>
+        <a type="button" class="btn btn-secondary" href="index.html">Go Back</a>
     </div>
 
 </body>
