--- a/public/message.html
+++ b/public/message.html
@@ -25,7 +25,7 @@
 
     <div class="container speaker-box align-items-center " style="padding-bottom: 5%;">
         <div class="div-6" style="float:none;text-align: center;">
-            <h2 class="h2">Congratulation ! Welcome Aboard !</h2>
+            <h2 class="h2">Congratulations, Welcome Aboard !</h2>
         </div>
         <h5 style="color: white;">Thank you for your response, Your Data Has Been Saved !</h5>
 
